# http-tui

./: LICENSE.txt  README.md  pyproject.toml
http_tui/: __main__.py  app.css  browser.css
